--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
+# Virtual environment
 venv/
-db.sqlite3
+.env/
+*.env
+
+# Python cache
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+
+# Django stuff
+db.sqlite3
+media/
+staticfiles/
+
+# VSCode / PyCharm
+.vscode/
+.idea/
+
+# Logs
+*.log
+
+# OS files
+.DS_Store
